  if the recorded program gets terminated with Control-C.
- Fix /umockdev-testbed-usb/lsusb test case to work with libusbx 1.0.16.
- Create PTY devices (for usage with get_dev_fd()) instead of plain files for
  other device types than tty as well, except for SUBSYSTEM=="usb". With that
  you can use record&replay for e. g. input or DRI control devices.
  (main part of issue #5)

0.3 (2013-07-12)
----------------
Command line argument changes (not backwards compatible):
- Change umockdev-record's --ioctl option: The argument is now
  "devicefile=outputfile" like with umockdev-run, instead of specifying the
  device as the first positional argument. This was inconsistant, and is
  necessary to support other kinds of recording in the future.
- Rename umockdev-run's -l/--load option to -d/--device. Other kinds of files
  (ioctl dumps, and read/write scripts) also get "loaded" into the testbed, so
  the previous name does not make sense any more.

New features/API:
- Emulate SUBSYSTEM=tty mocked device nodes as PTYs instead of plain files, so
  that they behave tty-like and respond to the relevant ioctls.
  (first part of issue #9)
- Add new method umockdev_testbed_get_dev_fd() to get the master end file
  descriptor for simulated tty devices (and possibly other kinds of devices in
  the future), so that a test suite can communicate with clients that connect
  to the simulated tty device node. (second part of issue #9)
- Add recording of read()s and write()s to a device into files, called
  "device scripts". Add umockdev-record option -s/--script for this.
- Add new method umockdev_testbed_load_script() to replay read()s and
  write()s of a device from a script. (issue #18)
- Add new option -s/--script to umockdev-run to load a script into the testbed.
  (issue #18)
- Add new method umockdev_testbed_set_attribute_link() to set attributes which
  are symlinks; most importantly this allows testbeds to set the "driver"
  attribute. (first part of issue #22)